--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -7,7 +7,7 @@
   </p>
 
   <p>
-    <%= f.label :text %>
+    <%= f.label :text %><br>
     <%= f.text_area :text %>
   </p>
 
@@ -16,3 +16,5 @@
   </p>
 
 <% end %>
+
+<%= link_to 'Back', articles_path %>
